// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse > script 1`] = `
"
  let count = 0
  const increment = () => {
    count += 1
  }
"
`;

exports[`parse > script-module 1`] = `
"
  export const foo = 'bar'
  export function bar() {}
"
`;

exports[`parse > style 1`] = `
"
button {
  color: red;
}
"
`;

exports[`parse > template 1`] = `
"<script lang="js">
  let count = 0
  const increment = () => {
    count += 1
  }
</script>

<button on:click={increment}>
  count is {count}
</button>"
`;
